[project]
name = "eaziform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.11.4"    
]

[project.optional-dependencies]
build = ["setuptools", "packaging"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
